[package]
name = "minesweeper"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_framepace = "0.13"
rand = "0.8.4"
itertools =  "0.11"
wasm-bindgen = "0.2.87"
instant = "0.1.12"
custom-print = "1.0.0"
clap = { version = "4.4.2", features = ["derive"] }

[profile.dev]
opt-level = 3 

[lib]
crate-type = ["rlib"]
